--- a/Spring/SpringCloud/01.云原生应用.md
+++ b/Spring/SpringCloud/01.云原生应用.md
@@ -116,29 +116,224 @@ SpringBootActuator应用有一些额外的管理端点，可用的包括：
 #### 2.1.2 排序`DiscoveryClient`实例
 `DiscoveryClient`接口扩展了`Ordered`，可以用于定义返回的`DiscoveryClient`的顺序。默认地，任意`DiscoveryClient`的顺序都是`0`。通过覆盖`getOrder()`方法可设置自定义`DiscoveryClient`实现的顺序。除此之外，可通过属性`spring.cloud.{clientIdentifier}.discovery.order`(Eureka可使用`eureka.client.order`)来设置SpringCloud提供的`DiscoveryClient`实现的顺序，比如`ConsulDiscoveryClient`、`EurekaDiscoveryClient`、`ZookeeperDiscoveryClient`。
 
+### 2.2 服务注册
+`ServiceRegistry`接口提供了`register(Registration)`和`deregister(Registration)`方法来注册自定义服务，其中`Registration`是一个标记接口。使用方法如下：  
+```java
+@Configuration
+@EnableDiscoveryClient(autoRegister=false)
+public class MyConfiguration {
+    private ServiceRegistry registry;
 
+    public MyConfiguration(ServiceRegistry registry) {
+        this.registry = registry;
+    }
 
+    // called through some external process, such as an event or a custom actuator endpoint
+    public void register() {
+        Registration registration = constructRegistration();
+        this.registry.register(registration);
+    }
+}
+```
+每个`ServiceRegistry`实现都有自己的`Registration`实现：  
++ `ZookeeperServiceRegistry`使用`ZookeeperRegistration`
++ `EurekaServiceRegistry`使用`EurekaRegistration`
++ `ConsulServiceRegistry`使用`ConsulRegistration`
 
+如果在使用`ServiceRegistry`接口，需要确保为它传值正确类型的`Registration`实现。  
 
+#### 2.2.1 ServiceRegistry自动注册
+默认地，`ServiceRegistry`实现会自动注册运行中的服务。为了禁止这种行为，可以设置：  
++ `@EnableDiscoveryClient(autoRegister=false)`
++ `spring.cloud.service-registry.auto-registration.enabled=false`
 
+当服务自动注册时，会发出两个事件：
++ `InstancePreRegisteredEvent`：服务注册之前触发
++ `InstanceRegisteredEvent`：服务注册之后触发  
 
+通过注册`ApplicationListener`可监听并响应这些事件。  
 
+#### 服务注册的Actuator端点
+`/service-registy`端点依赖Spring应用上下文中的`Registration`bean。通过GET方法调用`/service-registy`会返回`Registration`的状态；通过POST方法和JSON消息体调用`/server-registry`可修改当前`Registration`的状态。JSON消息体中必须包含`status`字段的期望值。查阅`ServiceRegistry`实现对应的文档获取更新status的可用值。例如，Eureka支持的status值包括：`UP`、`DOWN`、`OUT_OF_SERVICE`和`UNKNOWN`。  
 
+### 2.3 RestTemplate作为负载均衡客户端
+创建`RestTemplate`类型的`@Bean`并标记`@LoadBalanced`，可实现负载均衡的`RestTemplate`，如下：  
+```java
+@Configuration
+public class MyConfiguration {
 
+    @LoadBalanced
+    @Bean
+    RestTemplate restTemplate() {
+        return new RestTemplate();
+    }
+}
 
+public class MyClass {
+    @Autowired
+    private RestTemplate restTemplate;
 
+    public String doOtherStuff() {
+        String results = restTemplate.getForObject("http://stores/stores", String.class);
+        return results;
+    }
+}
+```
+请求中的URI需要使用虚拟主机名称(服务名称，而不是host)。Ribbon客户端用来创建完整的物理地址。  
+> 为了使用负载均衡的`RestTemplate`，类路径下应存在负载均衡实现类。推荐使用`BlockingLoadBalancerClient`实现类（引入`org.springframework.cloud:spring-cloud-loadbalancer`）。`RibbonLoadBalancerClient`也可使用，但目前处于维护状态，不推荐加入到新的项目中。如果想要使用`BlockingLoadBalancerClient`，确保没有引入`RibbonLoadBalancerClient`，因为默认会使用Ribbon。  
 
+### 2.4 WebClient作为负载均衡客户端  
+创建`WebClient`类型的`@Bean`并标记`@LoadBalanced`，可实现负载均衡的`WebClient`，如下：  
+```java
+@Configuration
+public class MyConfiguration {
 
+    @Bean
+    @LoadBalanced
+    public WebClient.Builder loadBalancedWebClientBuilder() {
+        return WebClient.builder();
+    }
+}
 
+public class MyClass {
+    @Autowired
+    private WebClient.Builder webClientBuilder;
 
+    public Mono<String> doOtherStuff() {
+        return webClientBuilder.build().get().uri("http://stores/stores")
+                        .retrieve().bodyToMono(String.class);
+    }
+}
+```
+请求中的URI需要使用虚拟主机名称(服务名称，而不是host)。Ribbon客户端用来创建完整的物理地址。
 
+> 为了使用负载均衡的`WebClient.Builder`，类路径下应存在负载均衡实现类。推荐使用`BlockingLoadBalancerClient`实现类（引入`org.springframework.cloud:spring-cloud-loadbalancer`）。底层将使用`ReactiveLoadBalancer`。spring-cloud-starter-netflix-ribbon也可实现负载均衡，但请求将被非`reactive的LoadBalancerClient`处理。且spring-cloud-starter-netflix-ribbon目前处于维护状态，不推荐加入到新的项目中。`ReactiveLoadBalancer`支持缓存。如果检测到`cacheManager`，`ServiceInstanceSupplier`的缓存版本会生效。建议在使用`ReactiveLoadBalancer`时开启缓存。  
 
+#### 2.4.1 重试失败请求
+可配置负载均衡`RestTemplate`重试失败的请求，这个逻辑默认是禁止的。通过在应用路径中添加`Spring Retry`可开启重试。`RestTemplate`有一些Ribbon配置值用于重试失败请求，如`client.ribbon.MaxAutoRetries`、`client.ribbon.MaxAutoRetriesNextServer`和`client.ribbon.OkToRetryOnAllOperations`属性。设置`spring.cloud.loadbalancer.retry.enabled=false`可禁止重试。  
 
+如果想要重试中实现`BackOffPolicy`（退避策略），创建一个`LoadBalancedRetryFactory`类型的bean并重写`createBackOffPolicy`方法：  
+```java
+@Configuration
+public class MyConfiguration {
+    @Bean
+    LoadBalancedRetryFactory retryFactory() {
+        return new LoadBalancedRetryFactory() {
+            @Override
+            public BackOffPolicy createBackOffPolicy(String service) {
+                return new ExponentialBackOffPolicy();
+            }
+        };
+    }
+}
+```
 
+如果想要在重试机制中添加`RetryListener`实现类，需要创建一个`LoadBalancedRetryListenerFactory`并返回服务使用的`RetryListener`数组，如下：  
+```java
+@Configuration
+public class MyConfiguration {
+    @Bean
+    LoadBalancedRetryListenerFactory retryListenerFactory() {
+        return new LoadBalancedRetryListenerFactory() {
+            @Override
+            public RetryListener[] createRetryListeners(String service) {
+                return new RetryListener[]{new RetryListener() {
+                    @Override
+                    public <T, E extends Throwable> boolean open(RetryContext context, RetryCallback<T, E> callback) {
+                        //TODO Do you business...
+                        return true;
+                    }
 
+                    @Override
+                     public <T, E extends Throwable> void close(RetryContext context, RetryCallback<T, E> callback, Throwable throwable) {
+                        //TODO Do you business...
+                    }
 
+                    @Override
+                    public <T, E extends Throwable> void onError(RetryContext context, RetryCallback<T, E> callback, Throwable throwable) {
+                        //TODO Do you business...
+                    }
+                }};
+            }
+        };
+    }
+}
+```
+### 2.5 多RestTemplate对象
+如果想要使用非负载均衡的`RestTemplate`，创建一个`RestTemplate`的bean并注入。为了使用负载均衡的`RestTemplate`，在创建Bean的时候使用`@LoadBalanced`，如下：  
+```java
+@Configuration
+public class MyConfiguration {
 
+    @LoadBalanced
+    @Bean
+    RestTemplate loadBalanced() {
+        return new RestTemplate();
+    }
 
+    @Primary
+    @Bean
+    RestTemplate restTemplate() {
+        return new RestTemplate();
+    }
+}
 
+public class MyClass {
+    @Autowired
+    private RestTemplate restTemplate;
 
+    @Autowired
+    @LoadBalanced
+    private RestTemplate loadBalanced;
 
+    public String doOtherStuff() {
+        return loadBalanced.getForObject("http://stores/stores", String.class);
+    }
+
+    public String doStuff() {
+        return restTemplate.getForObject("https://example.com", String.class);
+    }
+}
+```
+
+### 2.6 Spring WebFlux WebClient作为负载均衡客户端
+### 2.7 忽略网络接口
+### 2.8 HTTP Client Factories
+Spring Cloud Commons提供了创建Apache HTTP客户端的`ApacheHttpClientFactory`)和创建OK HTTP客户端的`OkHttpClientFactory`。当且仅当OK HTTP的jar存在于类路径下时才会创建`OkHttpClientFactory`的bean。  
+管理连接的bean:   
++ `ApacheHttpClientConnectionManagerFactory`
++ `OkHttpClientConnectionPoolFactory`  
+
+如果想要自定义下游项目如何创建HTTP客户端，可提供自己定义的bean实现。另外，如果提供了`HttpClientBuilder`或`OkHttpClient.Builder`的bean，默认工厂将使用这个builder作为下游项目返回的builder基础。通过设置`spring.cloud.httpclientfactories.apache.enabled`或`spring.cloud.httpclientfactories.ok.enabled`为`false`可禁止这些bean的创建。  
+
+### 2.9 启用的特性
+通过`/features`端点，可获取类路径中可用的特性及是否启用。返回的信息包括特性类型、名称、版本和供应商。  
+
+特性主要有两种：抽象特性和名称特性。抽象特性是定义的接口或抽象类，供实现类继承，如`DiscoveryClient`、`LoadBalancerClient`或`LockService`。抽象类或接口用于发现上下文中定义的该类型的bean。展示的版本来自`bean.getClass().getPackage().getImplementationVersion()`。命名特性是没有任何实现类的类，比如`Circuit Breaker`、`API Gateway`、`Spring Cloud Bus`等等。  
+
+任何模块都可声明任意数量的`HasFeature`的bean，且正确的放置在`@Configuration`：  
+```java
+@Bean
+public HasFeatures commonsFeatures() {
+  return HasFeatures.abstractFeatures(DiscoveryClient.class, LoadBalancerClient.class);
+}
+
+@Bean
+public HasFeatures consulFeatures() {
+  return HasFeatures.namedFeatures(
+    new NamedFeature("Spring Cloud Bus", ConsulBusAutoConfiguration.class),
+    new NamedFeature("Circuit Breaker", HystrixCommandAspect.class));
+}
+
+@Bean
+HasFeatures localFeatures() {
+  return HasFeatures.builder()
+      .abstractFeature(Foo.class)
+      .namedFeature(new NamedFeature("Bar Feature", Bar.class))
+      .abstractFeature(Baz.class)
+      .build();
+}
+```
+
+### 2.10 Spring Cloud兼容性验证
+设置`spring.cloud.compatibility-verifier.enabled`为`false`可禁止兼容性报告的特性，如果想要重写Spring Boot的兼容版本，设置`spring.cloud.copatibility-verifier.compatible-boot-versions`值。  
