--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -1,2 +1,64 @@
 ## Spring Cloud Config
 Spring Cloud Config提供了分布式系统中外部化配置管理的服务器端和客户端支持。Config Server集中管理不同环境的应用的外部配置。客户端和服务器的概念都可以映射为Spring的`Environment`和`PropertySource`抽象类，因此非常适合Spring应用但也可以运行于其他任何语言编写的应用。应用是从开发到测试到生产流程式部署的，通过服务器可管理这些环境中的配置并确保应用迁移时所有配置都存在。服务器后台存储默认实现是git，所以配置环境的版本管理可以得到很好的支持。
+
+### 一、SpringCloudConfig服务器
+Spring云配置服务器提供了基于HTTP资源的外部配置管理（键值对或YAML）。服务器可以通过`@EnableConfigServer`内置到SpringBoot应用中：  
+```java
+@SpringBootApplication
+@EnableConfigServer
+public class ConfigServer {
+  public static void main(String[] args) {
+    SpringApplication.run(ConfigServer.class, args);
+  }
+}
+```
+像其他SpringBoot应用一样，这个应用默认运行在8080端口，然而有很多方式可以将端口切换到更常用的8888端口。最方便的方式是启动时配置`spring.config.name=configserver`，这样同时会加载一个默认的配置仓库（在ConfigServer的jar中存在一个`configserver.yml`文件）。另一种方式是使用自己的`application.properties`文件：  
+```yaml
+server.port: 8888
+spring.cloud.config.server.git.uri: file://${user.home}.config-repo
+```
+在这里`${user.home}/config-repo`是一个包含YAML和properties文件的git仓库。  
+
+> 如果配置仓库中仅是文本文件，那么初始化拷贝会非常快且高效。如果存储的是二进制文件时（尤其是文件比较大），可能会遇到首次配置时的延迟或服务器内存错误。  
+
+#### 1.1 Environment仓库
+`EnvironmentRepository`决定了ConfigServer的配置数据存储在哪里，它会提供一个`Environment`对象。这个`Environment`对象是Spring的`Environment`浅拷贝（包括`propertySources`），它由三个变量决定：  
++ `{application}`：对应着客户端的`spring.application.name`
++ `{profile}`：对应着客户端的`spring.profiles.active`（逗号分隔的列表）
++ `{label}`：服务器端的特性，标记了配置文件的版本设置
+
+Repository的实现类通常类似于SpringBoot应用，从配置文件中加载`spring.config.name`到`{application}`参数，`spring.profiles.active`到`{profiles}`参数。优先级规则也类似于Spring Boot应用：激活的profile优先级高于默认，且多个profile中的最后一个优先级最高。  
+
+客户端可配置`bootstrap.yml`如下（这些配置也可以像SpringBoot应用一样，通过环境变量或命令行参数设置）：  
+```yaml
+spring:
+    application:
+        name: foo
+    profiles:
+        active: dev, mysql
+```
+
+如果数据库是基于文件的，服务器会通过`application.yml`（所有客户端共享）和`foo.yml`（更高的优先级）创建`Environment`。如果YAML文件中有指向Spring的profiles的文档，这些文档会有更高的优先级（按照列举的profile的顺序）。如果存在指定profile的YAML文件或properties文件，这些文件也会有比默认文件更高的优先级。高优先级的文件或文档会转换为`Environment`中靠前的`PropertySource`。  
+通过设置`spring.cloud.server.accept-empty`为`false`，当应用没有发现时服务器会返回HTTP的404状态。这个标志默认是true。  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
