--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -41,6 +41,12 @@ spring:
 如果数据库是基于文件的，服务器会通过`application.yml`（所有客户端共享）和`foo.yml`（更高的优先级）创建`Environment`。如果YAML文件中有指向Spring的profiles的文档，这些文档会有更高的优先级（按照列举的profile的顺序）。如果存在指定profile的YAML文件或properties文件，这些文件也会有比默认文件更高的优先级。高优先级的文件或文档会转换为`Environment`中靠前的`PropertySource`。  
 通过设置`spring.cloud.server.accept-empty`为`false`，当应用没有发现时服务器会返回HTTP的404状态。这个标志默认是true。  
 
+##### 1.1.1 基于Git
+默认的`EnvironmentRepository`实现基于Git，Git可方便的管理更新和物理环境，且便于审查变更。设置配置服务器的`spring.cloud.config.server.git.uri`属性可变更仓库的地址。当属性以`file:`为前缀时服务器将会关联本地仓库以快速启动且不依赖仓库服务器。但是这种场景下，服务器会直接应用在本地仓库而不会拷贝。为了均衡配置服务器并保持高可用，需要保证所有服务器实例通过共享文件系统指向同一个仓库。即使在这种场景下，使用共享文件系统的`ssh:`协议会更好，这样服务器会拷贝并使用本地缓存备份。  
+
+仓库实现类会把HTTP资源的`{label}`参数映射到git的标签（提交ID、分支名称或tag）。如果git的分支或标签名称包含`/`，HTTP URL中的label应该使用`(_)`以避免URL路径歧义。比如，如果仓库中的label是`foo/bar`，URL应替换为`foo(_)bar`。这同样适用于`{application}`参数。
+
+
 
 
 
