--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -46,7 +46,30 @@ spring:
 
 仓库实现类会把HTTP资源的`{label}`参数映射到git的标签（提交ID、分支名称或tag）。如果git的分支或标签名称包含`/`，HTTP URL中的label应该使用`(_)`以避免URL路径歧义。比如，如果仓库中的label是`foo/bar`，URL应替换为`foo(_)bar`。这同样适用于`{application}`参数。
 
-
++ 跳过SSL证书认证  
+  `spring.cloud.config.server.git.skipSslValidation: true`
++ 设置HTTP连接超时（秒）  
+  `spring.cloud.config.server.git.timeout: 4`
++ Git URI中的占位符（使用`{application}`、`{profile}`或`{label}`）  
+  `spring.cloud.config.server.git.uri: https://github.com/myorg/{application}`
++ 模式匹配和多仓库配置  
+  Spring Cloud Config同样支持通过模式匹配的方式对应应用和profile。模式的样式是通过逗号分隔的带有通配符的`{application/profile}`（以通配符开头的模式必须用引号括起来），如下：  
+  ```yaml
+  spring:
+    cloud:
+      config:
+        server:
+          git:
+            uri: https://github.com/spring-cloud-samples/config-repo
+            repos:
+              simple: https://github.com/simple/config-repo
+              special:
+                pattern: special*/dev*,*special*/dev*
+                uri: https://github.com/special/config-repo
+              local:
+                pattern: local*
+                uri: file:/home/configsvc/config-repo
+  ```
 
 
 
