--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -70,7 +70,7 @@ spring:
                 pattern: local*
                 uri: file:/home/configsvc/config-repo
   ```
-
+  当`{application}/{profile}`不匹配时，使用`spring.cloud.config.server.git.uri`指定的默认URI。上面示例中，`simple`的仓库匹配模式是`simple/*`，仅匹配应用名称为`simple`的所有profile。`local`仓库匹配所有应用名称以`local`开头的应用的所有profile(默认的`/*`后缀会自动添加到任何的没有profile匹配项的模式)。  
 
 
 
