--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -1,7 +1,7 @@
-## Spring Cloud Config
+# Spring Cloud Config
 Spring Cloud Config提供了分布式系统中外部化配置管理的服务器端和客户端支持。Config Server集中管理不同环境的应用的外部配置。客户端和服务器的概念都可以映射为Spring的`Environment`和`PropertySource`抽象类，因此非常适合Spring应用但也可以运行于其他任何语言编写的应用。应用是从开发到测试到生产流程式部署的，通过服务器可管理这些环境中的配置并确保应用迁移时所有配置都存在。服务器后台存储默认实现是git，所以配置环境的版本管理可以得到很好的支持。
 
-### 一、SpringCloudConfig服务器
+## 一、SpringCloudConfig服务器
 Spring云配置服务器提供了基于HTTP资源的外部配置管理API（键值对或YAML）。服务器可以通过`@EnableConfigServer`内置到SpringBoot应用中：  
 ```java
 @SpringBootApplication
@@ -21,7 +21,7 @@ spring.cloud.config.server.git.uri: file://${user.home}.config-repo
 
 > 如果配置仓库中仅是文本文件，那么初始化拷贝会非常快且高效。如果存储的是二进制文件时（尤其是文件比较大），可能会遇到首次配置时的延迟或服务器内存错误。  
 
-#### 1.1 Environment仓库
+### 1.1 Environment仓库
 `EnvironmentRepository`提供一个`Environment`对象，决定了配置服务器将配置数据存储在什么位置。`Environment`对象是Spring的`Environment`浅拷贝（包括`propertySources`），它由三个变量决定：  
 + `{application}`：对应着客户端的`spring.application.name`
 + `{profile}`：对应着客户端的`spring.profiles.active`（逗号分隔的列表）
@@ -41,18 +41,18 @@ spring:
 如果仓库基于文件，服务器会通过`application.yml`（所有客户端共享）和`foo.yml`（更高的优先级）创建`Environment`。如果YAML文件中有指向Spring的profiles的文档，这些文档会有更高的优先级（按照列举的profile的顺序）。如果存在指定profile的YAML文件或properties文件，这些文件也会有比默认文件更高的优先级。高优先级的文件或文档会转换为`Environment`中靠前的`PropertySource`。  
 通过设置`spring.cloud.server.accept-empty`为`false`，当应用没有发现时服务器会返回HTTP的404状态。这个标志默认是true。  
 
-##### 1.1.1 基于Git
+#### 1.1.1 基于Git
 默认`EnvironmentRepository`实现是基于Git后台，可以方便的对更新和物理设备进行管理，及审查变更。设置配置服务器的`spring.cloud.config.server.git.uri`属性可变更仓库地址。当属性以`file:`为前缀时服务器将会关联本地仓库以实现快速启动且不依赖其他服务器。但是这种场景下，服务器会直接应用在本地仓库而不会拷贝。为了均衡配置服务器并保持高可用，需要保证所有服务器实例通过共享文件系统指向同一个仓库。即使在这种场景下，使用共享文件系统的`ssh:`协议会更好，这样服务器会拷贝并使用本地缓存备份。  
 
 仓库实现类会把HTTP资源的`{label}`参数映射到git的标签（提交ID、分支名称或tag）。如果git的分支或标签名称包含`/`，HTTP URL中的label应该使用`(_)`以避免URL路径歧义。比如，如果仓库中的label是`foo/bar`，URL应替换为`foo(_)bar`。这同样适用于`{application}`参数。
 
-+ 跳过SSL证书认证  
++ **跳过SSL证书认证**  
   `spring.cloud.config.server.git.skipSslValidation: true`
-+ 设置HTTP连接超时（秒）  
++ **设置HTTP连接超时（秒）**  
   `spring.cloud.config.server.git.timeout: 4`
-+ Git URI中的占位符（使用`{application}`、`{profile}`或`{label}`）  
++ **Git URI中的占位符（使用`{application}`、`{profile}`或`{label}`）**  
   `spring.cloud.config.server.git.uri: https://github.com/myorg/{application}`
-+ 模式匹配和多仓库配置  
++ **模式匹配和多仓库配置**  
   Spring Cloud Config同样支持通过模式匹配的方式对应应用和profile。模式的样式是通过逗号分隔的带有通配符的`{application/profile}`（以通配符开头的模式必须用引号括起来），如下：  
   ```yaml
   spring:
@@ -71,12 +71,79 @@ spring:
                 uri: file:/home/configsvc/config-repo
   ```
   当`{application}/{profile}`不匹配时，使用`spring.cloud.config.server.git.uri`指定的默认URI。上面示例中，`simple`的仓库匹配模式是`simple/*`，仅匹配应用名称为`simple`的所有profile。`local`仓库匹配所有应用名称以`local`开头的应用的所有profile(默认的`/*`后缀会自动添加到任何的没有profile匹配项的模式)。  
+  仓库的`pattern`属性是一个数组，所以可以使用YAML数组格式（或`[0]`、`[1]`等后缀）来绑定多个模式。  
+  每个仓库可选择将配置文件存储到子目录中，可通过`searchPaths`属性指定查找这些路径的模式。`spring.cloud.config.server.git.searchPaths: foo,bar*`会从顶级目录、`foo/`子目录和`bar`开头的子目录中查找配置文件。  
+  服务器默认会在第一次请求配置信息时拷贝远程仓库，通过配置可设置为在启动时拷贝远程仓库：  
+  ```yaml
+  spring:
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://git/common/config-repo.git
+          repos:
+            team-a:
+                pattern: team-a-*
+                cloneOnStart: true  # 在启动时拷贝远程仓库
+                uri: https://git/team-a/config-repo.git
+  ```
+  > 这种设置可在配置服务器启动时快速判断配置源是否配置错误。
++ **认证**  
+  通过配置`username`和`password`属性可以使用远程仓库的HTTP基础认证：  
+  ```yaml
+  spring:
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/spring-cloud-samples/config-repo
+          username: trolley
+          password: strongpassword
+  ```
+  除此之外，还可以使用SSH方式：在默认的`~/.ssh`目录下存储SSH的key并将URI执行SSH路径。在`~/.ssh/known_hosts`文件中添加`ssh-rsa`格式的Git服务器的入口是重点。为了避免意外情况，应确保在`known_hosts`文件中只有一个指向Git服务器的入口，且地址与配置服务器URL一致。HTTPS代理设置可添加到`~/.git/config`文件或通过系统属性（`-Dhttps.proxyHost`和`-Dhttps.proxyPort`）。
++ **Git SSH配置**  
+  | 属性名称 | 描述 |
+  | :-- | :-- |
+  | `ignoreLocalSshSettings` | 当值为`true`时，使用基于属性的SSH配置以代替文件。必须设置为`spring.cloud.config.server.git.ignoreLocalSshSettings`，不能定义在仓库中。 |  
+  | `privateKey` | 可用的SSH私钥。当`ignoreLocalSshSettings`设置为`true`且Git的URI为SSH格式时必须设置。 |  
+  | `hostKey` | 有效的主机密钥。如果设置了`hostKeyAlgorithm`则必须设置。 |
+  | `hostKeyAlgorithm` | `ssh-dss, ssh-rsa, ecdsa-sha2-nistp256, ecdsa-sha2-nistp384, or ecdsa-sha2-nistp521`之一。如果设置了`hostKey`则必须设置。 |
+  | `strictHostKeyChecking` | `true`或`false`。如果为false，忽略主机密钥的错误。 |
+  | `knownHostsFile` | 自定义`.known_hosts`文件的位置。 |
+  | `preferredAuthentications` | 重写服务器的认证方法顺序。 |
++ **Git查找路径中的占位符**  
+  Spring Cloud配置服务器支持在搜索路径中使用`{application}`、`{profile}`或`{label}`占位符。比如：  
+  ```yaml
+  spring:
+    cloud:
+      config:
+        server:
+          git:
+            uri: https://github.com/spring-cloud-samples/config-repo
+            searchPaths: '{application}'
+  ```
++ **强制拉取Git仓库**  
+  `spring.cloud.config.server.git.force-pull: true`属性可以强制Spring Cloud配置服务器从远程仓库拉取配置信息。如果有多个仓库配置，可以在每个仓库下都配置`force-pull`属性。默认的`force-pull`属性为`false`。  
++ **删除Git仓库的未跟踪(untracked)分支**  
+  Spring Cloud配置服务器从远程git仓库检出分支后会在本地备份，且这个分支会一直保留或直到下次服务器重启。因此，可能导致远程分支删除后，本地拷贝仍然可用。如果Spring Cloud配置客户端通过`--spring.cloud.config.label=deletedRemoteBranch,master`，将会一直获取`deletedRemoteBranch`的本地分支，而不会从`master`获取。  
+  设置`spring.cloud.config.server.git.deleteUntrackedBranches: true`属性可保持本地仓库分支并根据远程分支更新，这会强制Spring Cloud配置服务器从本地仓库中删除未跟踪分支。默认值为`false`。
++ **Git刷新频率**  
+  `spring.cloud.config.server.git.refreshRate`属性可指定配置服务器从git后台更新配置数据的频率。属性值的单位为秒，默认值为0，所以每次配置服务器收到请求的时候都会从Git仓库获取更新后的配置。  
 
-
-
-
-
-
+#### 1.1.2 Vault后台
+Spring Cloud配置服务器也支持Vault作为后台。为了启动Spring Cloud配置服务器使用vault后台，启动服务器时使用`vault`的profile。比如在`application.properties`文件中添加`spring.profiles.active=vault`。Vault属性的配置包括(全部属性的前缀为`spring.cloud.config.server.vault`)：  
+| 名称 | 默认值 | 
+| `host` | `127.0.0.1` | 
+| `port` | `8200` |
+| `scheme` | `http` |
+| `backend` | `secret` |
+| `defaultKey` | `application` |
+| `profileSeparator` | `,` |
+| `kvVersion` | `1` |
+| `skipSslValidation` | `false` |
+| `timeout` | `5` |
+| `namespace` | `null` |
+所有可配置的属性都可在`org.springframework.cloud.config.server.environment.VaultEnvironmentProperties`中找到。  
 
 
 
