--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -112,7 +112,7 @@ spring:
   | `strictHostKeyChecking` | `true`或`false`。如果为false，忽略主机密钥的错误。 |
   | `knownHostsFile` | 自定义`.known_hosts`文件的位置。 |
   | `preferredAuthentications` | 重写服务器的认证方法顺序。 |
-  
+
 + **Git查找路径中的占位符**  
   Spring Cloud配置服务器支持在搜索路径中使用`{application}`、`{profile}`或`{label}`占位符。比如：  
   ```yaml
@@ -149,6 +149,35 @@ Spring Cloud配置服务器也支持Vault作为后台。为了启动Spring Cloud
 | `namespace` | `null` |
 
 所有可配置的属性都可在`org.springframework.cloud.config.server.environment.VaultEnvironmentProperties`中找到。  
+
+#### 1.1.3 通过代理访问后台
+在Git或Vault配置下设置`proxy.http`或`proxy.https`，Spring Cloud配置服务器即可通过HTTP(S)代理访问Git或Vault。这些设置是基于仓库的，需针对每个仓库单独配置：  
+```yaml
+spring:
+  profiles:
+    active: git
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/spring-cloud-samples/config-repo
+          proxy:
+            https:
+              host: my-proxy.host.io
+              password: myproxypassword
+              port: '3128'
+              username: myproxyusername
+              nonProxyHosts: example.com
+```
+#### 1.1.4 所有应用共享配置
++ **基于文件的仓库**  
+  文件名称为`application*`(`application.properties`、`application.yml`、` application-*.properties`等)的资源会在所有客户端应用之间共享。可以通过这些文件名配置全局默认属性并在必要时候通过指定应用文件来重写属性。  
++ **Vault服务器**  
+  在使用Vault作为后台时，将配置放在`secret/application`下可在所有应用中共享配置。比如，如下的配置可保证所有的应用能使用`foo`和`baz`属性：  
+  ```shell
+  $ vault write secret/application foo=bar baz=bam
+  ```
+
 
 
 
