--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -177,8 +177,17 @@ spring:
   ```shell
   $ vault write secret/application foo=bar baz=bam
   ```
-
-
+#### 1.1.5 覆盖属性
+云配置服务器提供了`overrides`属性来为所有应用提供配置属性。被覆盖的属性不能被正常的SpringBoot应用随意修改。声明的覆盖属性都应该作为name-value映射添加到`spring.cloud.config.server.overrides`属性，如：  
+```yaml
+spring:
+  cloud:
+    config:
+      server:
+        overrides:
+          foo: bar
+```
+上面的示例会导致所有的应用除自身配置外使用`foo=bar`。  
 
 
 
