--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -189,6 +189,26 @@ spring:
 ```
 上面的示例会导致所有的应用除自身配置外使用`foo=bar`。  
 
+### 1.2 健康检查
+配置服务器提供了一个健康检查来确定配置的`EnvironmentRepository`是否正常工作。默认地，健康检查器会请求`EnvironmentRepository`实现类的`app`，默认default和默认label信息。可以通过自定义profile和label配置健康检查器来检查更多的应用，如：  
+```yaml
+spring:
+  cloud:
+    config:
+      server:
+        health:
+          repositories:
+            myservice:
+              label: mylabel
+            myservice-dev:
+              name: myservice
+              profiles: development
+```
+通过设置`spring.cloud.config.server.health.enabled=false`可禁用健康检查器。  
+
+### 1.3 加解密
+
+
 
 
 
