--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -207,6 +207,30 @@ spring:
 通过设置`spring.cloud.config.server.health.enabled=false`可禁用健康检查器。  
 
 ### 1.3 加解密
+如果远程属性源包含了加密内容(`{cipher}`前缀的值)，会在通过HTTP发送到客户端前进行解密，这样可以避免属性值在未使用时明文展示。如果属性无法解密就会被移除，并在属性源中添加一个`invalid`前缀的相同key值的属性，其属性值标记为不可用(通常为`<n/a>`)。这大大地避免了加密文本被用作密码或意外泄露。  
+加密文本在`application.yml`中的配置如下：  
+```yaml
+spring:
+  datasource:
+    username: dbuser
+    password: '{cipher}FKSAJDFGYOS8F7GLHAKERGFHLSAJ'
+```
+在`.properties`文件中的加密值不能使用引号引用，否则将无法解密。  
+配置服务器提供了`/encrypt`和`/decrypt`端点用于加密或解密（默认被保护，仅可被授信用户访问）。当加密或解密内容包含需要URL编码的字符时，应该使用属性`--data-urlencode`。  
+
+### 1.4 密钥管理
+配置服务器可以使用对称密钥或非对称密钥。从安全性上讲非对称密钥更佳，但是对称密钥作为可以配置在`bootstrap.properties`中的一个属性，更易于使用。配置对称密钥，可以设置`encrypt.key`或使用`ENCRYPT_KEY`环境变量。  
+而非对称密钥需要使用keystore，keystore属性前缀为`encrypt.keystore.*`:  
+
+| 属性 | 描述 |
+| :-- | :-- |
+| `encrypt.keyStore.location` | 包含`Resource`位置 |
+| `encrypt.keyStore.password` | 打开keystore的密码 |
+| `encrypt.keyStore.alias` | 使用的密钥的标识 |
+| `encrypt.keyStore.type` | 创建的keystore类型，默认为`jks` |
+
+
+
 
 
 
