--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -220,7 +220,7 @@ spring:
 
 ### 1.4 密钥管理
 配置服务器可以使用对称密钥或非对称密钥。从安全性上讲非对称密钥更佳，但是对称密钥作为可以配置在`bootstrap.properties`中的一个属性，更易于使用。配置对称密钥，可以设置`encrypt.key`或使用`ENCRYPT_KEY`环境变量。  
-而非对称密钥需要使用keystore，keystore属性前缀为`encrypt.keystore.*`:  
+而非对称密钥需要使用keystore(通过JDK自带的`keytool`创建)，keystore属性前缀为`encrypt.keystore.*`:  
 
 | 属性 | 描述 |
 | :-- | :-- |
@@ -229,7 +229,7 @@ spring:
 | `encrypt.keyStore.alias` | 使用的密钥的标识 |
 | `encrypt.keyStore.type` | 创建的keystore类型，默认为`jks` |
 
-
+公钥进行加密，私钥用于解密。因此，如果服务器仅加密可只配置公钥，而本地配置私钥进行解密。实践中可能并不希望本地解密，因为这样会导致密钥管理分布在所有的客户端上而非集中在服务器上。
 
 
 
