--- a/Spring/SpringCloud/02.SpringCloudConfig.md
+++ b/Spring/SpringCloud/02.SpringCloudConfig.md
@@ -231,12 +231,34 @@ spring:
 
 公钥进行加密，私钥用于解密。因此，如果服务器仅加密可只配置公钥，而本地配置私钥进行解密。实践中可能并不希望本地解密，因为这样会导致密钥管理分布在所有的客户端上而非集中在服务器上。
 
+### 1.5 创建测试用KeyStore
+创建测试用KeyStore可使用命令：  
+```
+$ keytool -genkeypair -alias mytestkey -keyalg RSA \
+  -dname "CN=Web Server,OU=Unit,O=Organization,L=City,S=State,C=US" \
+  -keypass changeme -keystore server.jks -storepass letmein
+```
+将`server.jks`文件放到类路径下并在配置服务器的`bootstrap.yml`文件中添加属性：  
+```yaml
+encrypt:
+  keyStore:
+    location: classpath:/server.jks
+    password: letmein
+    alias: mytestkey
+    secret: changeme
+```
 
+### 1.6 使用多key及key轮询
+除了加密属性值的`{cipher}`前缀，配置服务器会查找加密文本的零或多个`{name:value}`前缀。key值会传递给`TextEncryptorLocator`，用于根据逻辑定位加密的`TexgtEncryptor`。如果已经配置了keystore(即`encrypt.keystore.location`)，默认的定位器会查找`key`前缀的别名，配置类似于：  
+```yaml
+foo:
+  bar: `{cipher}{key:testkey}...`
+```
+`TextLocator`会寻找名字为`testKey`的key。也可以通过`{secret:...}`前缀配置secret值，未配置的情况下则使用keystore的密码。如果要配置secret，应该通过自定义`SecretLocator`对它进行加密。  
+如果key仅用于加密少量的配置数据，key轮询基本上是无用的。但是有时候我们需要变更key（比如安全事件中）。这时，所有的客户端都需要变更他们的源配置文件并使用新的`{key:...}`前缀。注意：客户端应该先检查配置服务器的keystore中key别名是否可用。  
 
-
-
-
-
+### 1.7 提供未解密属性
+有时候我们希望客户端在本地解密配置信息，而不是通过服务器代为处理。这时，在`encrypt.*`配置定位key的情况下依然可以使用`/encrypt`和`/decrypt`端点，但是需要在`bootstap.[yml|properties]`文件中明确地设置`spring.cloud.config.server.encrypt.enabled=false`来关闭输出属性被解密。
 
 
 
