--- a/Spring/SpringFramework/01.SpringIoC.md
+++ b/Spring/SpringFramework/01.SpringIoC.md
@@ -2,6 +2,25 @@
 
 ## 一、控制反转（依赖注入）
 IoC容器是Spring实现**依赖反转**模式的载体，在对象生成或初始化时直接将数据注入到对象中，或通过将对象引用注入到对象数据域中的方式来注入对方法调用的依赖。这种依赖注入是可以递归的，对象被逐层注入。  
+> Dependency injection (DI) is a process whereby objects define their dependencies (that is, the other objects with which they work) only through constructor arguments, arguments to a factory method, or properties that are set on the object instance after it is constructed or returned from a factory method. 
+
+
+### Dependency Resolution Process
+The container performs bean dependency resolution as follows:
+
++ The `ApplicationContext` is created and initialized with configuration metadata that describes all the beans. Configuration metadata can be specified by XML, Java code, or annotations.
+
++ For each bean, its dependencies are expressed in the form of properties, constructor arguments, or arguments to the static-factory method (if you use that instead of a normal constructor). These dependencies are provided to the bean, when the bean is actually created.
+
++ Each property or constructor argument is an actual definition of the value to set, or a reference to another bean in the container.
+
++ Each property or constructor argument that is a value is converted from its specified format to the actual type of that property or constructor argument. By default, Spring can convert a value supplied in string format to all built-in types, such as int, long, String, boolean, and so forth.
+
+容器执行依赖项处理过程如下：  
++ 创建并使用定义bean的配置元数据来初始化`ApplicationContext`。可以使用XML、Java代码或注解添加配置元数据。  
++ 对于bean来说，可以使用属性、构造器参数或替代构造器的静态工厂方法参数来描述依赖项。容器会在bean实际创建时提供配置的依赖项。  
++ 每个属性或构造器参数要么是实际设置值的定义，要么是容器中其他bean的引用。  
++ 值类型的属性或构造器参数转换为实际需要的类型。默认地，Spring能够将设置的string类型值转换为所有的内置类型，如int、long、String、boolean等。  
 
 ## 二、IoC容器
 在Spring中IoC容器有两个主要的IoC容器系列：基于**BeanFactory接口**的简单容器系列和**ApplicationContext应用上下文**。  
