--- a/Spring/SpringFramework/01.SpringIoC.md
+++ b/Spring/SpringFramework/01.SpringIoC.md
@@ -22,6 +22,29 @@ The container performs bean dependency resolution as follows:
 + 每个属性或构造器参数要么是实际设置值的定义，要么是容器中其他bean的引用。  
 + 值类型的属性或构造器参数转换为实际需要的类型。默认地，Spring能够将设置的string类型值转换为所有的内置类型，如int、long、String、boolean等。  
 
+### 配置属性
+Specifying the target bean through the `parent` attribute creates a reference to a bean that is in a parent container of the current container. The value of the `parent` attribute may be the same as either the `id` attribute of the target bean or one of the values in the `name` attribute of the target bean. The target bean must be in a parent container of the current one. You should use this bean reference variant mainly when you have a hierarchy of containers and you want to wrap an existing bean in a parent container with a proxy that has the same name as the parent bean. The following pair of listings shows how to use the `parent` attribute:
+
+通过`parent`属性指定目标bean会创建一个指向当前容器的父容器中bean的引用。`parent`属性的值应该与目标bean的`id`属性或`name`属性值一致。目标bean必须位于当前容器的父容器中。这种用法主要用于容器层级结构中通过代理的方式封装父容器bean，且与父容器中的bean名称相同。下面展示了如何使用`parent`属性：
+
+```xml
+<!-- in the parent context -->
+<bean id="accountService" class="com.something.SimpleAccountService">
+    <!-- insert dependencies as required as here -->
+</bean>
+```
+
+```xml
+<!-- in the child (descendant) context -->
+<bean id="accountService" <!-- bean name is the same as the parent bean -->
+    class="org.springframework.aop.framework.ProxyFactoryBean">
+    <property name="target">
+        <ref parent="accountService"/> <!-- notice how we refer to the parent bean -->
+    </property>
+    <!-- insert other configuration and dependencies as required here -->
+</bean>
+```
+
 ## 二、IoC容器
 在Spring中IoC容器有两个主要的IoC容器系列：基于**BeanFactory接口**的简单容器系列和**ApplicationContext应用上下文**。  
 
