--- a/Spring/SpringFramework/01.SpringIoC.md
+++ b/Spring/SpringFramework/01.SpringIoC.md
@@ -116,3 +116,50 @@ The <list/>, <set/>, <map/>, and <props/> elements set the properties and argume
 
 ![BeanFactory的层级结构](img/BeanFactoryHierarchy.JPG)
 
+## Method Injection
+大多数场景下，容器中的大多数bean是单例模式；当相同scope的bean协作时（如单例对单例），通过将其中一个bean注入到另一个bean即可处理依赖。但不同scope的bean协作则存在问题。比如单例BeanA需要用到原型BeanB，由于容器仅创建BeanA一次，仅有一次机会设置beanA的属性。容器无法在BeanA每次需要时提供beanB的新实例。  
+一个方案是放弃一定的控制反转。可以通过实现`ApplicationContextAware`接口让BeanA能够感知容器，并在BeanA每次使用BeanB时调用容器的`getBean(B)`获取BeanB的新实例。比如：  
+```java
+// a class that uses a stateful Command-style class to perform some processing
+package fiona.apple;
+
+// Spring-API imports
+import org.springframework.beans.BeansException;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.ApplicationContextAware;
+
+public class CommandManager implements ApplicationContextAware {
+
+    private ApplicationContext applicationContext;
+
+    public Object process(Map commandState) {
+        // grab a new instance of the appropriate Command
+        Command command = createCommand();
+        // set the state on the (hopefully brand new) Command instance
+        command.setState(commandState);
+        return command.execute();
+    }
+
+    protected Command createCommand() {
+        // notice the Spring API dependency!
+        return this.applicationContext.getBean("command", Command.class);
+    }
+
+    public void setApplicationContext(
+            ApplicationContext applicationContext) throws BeansException {
+        this.applicationContext = applicationContext;
+    }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
