--- a/Spring/SpringFramework/01.SpringIoC.md
+++ b/Spring/SpringFramework/01.SpringIoC.md
@@ -116,7 +116,7 @@ The <list/>, <set/>, <map/>, and <props/> elements set the properties and argume
 
 ![BeanFactory的层级结构](img/BeanFactoryHierarchy.JPG)
 
-## Method Injection
+## 三、 Method Injection
 大多数场景下，容器中的大多数bean是单例模式；当相同scope的bean协作时（如单例对单例），通过将其中一个bean注入到另一个bean即可处理依赖。但不同scope的bean协作则存在问题。比如单例BeanA需要用到原型BeanB，由于容器仅创建BeanA一次，仅有一次机会设置beanA的属性。容器无法在BeanA每次需要时提供beanB的新实例。  
 一个方案是放弃一定的控制反转。可以通过实现`ApplicationContextAware`接口让BeanA能够感知容器，并在BeanA每次使用BeanB时调用容器的`getBean(B)`获取BeanB的新实例。比如：  
 ```java
@@ -151,6 +151,51 @@ public class CommandManager implements ApplicationContextAware {
     }
 }
 ```
+上述方式不值得推荐，因为业务代码会与Spring框架耦合。作为Spring IoC容器的高级特性，方法注入的方式可更简洁地处理这类问题。  
+
+### Lookup方法注入
+容器中的Lookup方法注入会重写容器管理的beanA中的方法并返回从容器中查找另一个beanB的结果。这种方式主要是用于原型bean处理，如前述的beanA与beanB的处理。Spring框架实现方法注入是通过CGLIB库的字节码生成方式动态地生成一个重写了lookup方法的子类。  
+
+为了动态地生成子类，应满足如下要求：  
++ Spring容器将实现子类的类不能声明`final`，且重写的方法也不可以使用`final`修饰。
++ 单元测试一个有`abtract`方法的类时，需要手动实现该类的子类并提供抽象方法的桩实现(stub implementation)。
++ 组件扫描时需要使用非抽象类，因此需要实现非抽象方法。
++ lookup方法无法对工厂方法及配置类中的`@Bean`方法无效，因为这类情况下容器无法控制创建实例进而无法创建运行时生成的子类。  
+
+在包含需要方法注入的类中，需要注入的方法应该包含如下格式的签名：  
+```java
+<public|protected> [abstract] <return-type> theMethodName(no-arguments);
+```
+如果方法是`abstract`，动态生成的子类会实现该方法。否则会重写原始类中定义的非抽象方法。在xml配置中，可以如下配置lookup方法：  
+```xml
+<!-- commandProcessor uses statefulCommandHelper -->
+<bean id="commandManager" class="fiona.apple.CommandManager">
+    <lookup-method name="createCommand" bean="myCommand"/>
+</bean>
+```
+而在基于注解的组件模式中，可以通过`@Lookup`注解来声明一个lookup方法：  
+```java
+public abstract class CommandManager {
+
+    public Object process(Object commandState) {
+        Command command = createCommand();
+        command.setState(commandState);
+        return command.execute();
+    }
+
+    @Lookup("myCommand")
+    protected abstract Command createCommand();
+}
+```
+通常应该将注解`@Lookup`的方法声明为非抽象的桩方法，来确保符合Spring的组件扫描规则（默认地忽略抽象类）。  
+
+### Arbitrary Method Replacement
+相对于lookup方法注入，一个较少使用的方法注入形式是将bean中的任意方法替换为另一个方法。参照[Arbitrary Method Replacement](https://docs.spring.io/spring/docs/5.2.2.RELEASE/spring-framework-reference/core.html#beans-factory-arbitrary-method-replacement)
+
+
+
+
+
 
 
 
