--- a/Spring/SpringFramework/01.SpringIoC.md
+++ b/Spring/SpringFramework/01.SpringIoC.md
@@ -192,6 +192,18 @@ public abstract class CommandManager {
 ### Arbitrary Method Replacement
 相对于lookup方法注入，一个较少使用的方法注入形式是将bean中的任意方法替换为另一个方法。参照[Arbitrary Method Replacement](https://docs.spring.io/spring/docs/5.2.2.RELEASE/spring-framework-reference/core.html#beans-factory-arbitrary-method-replacement)
 
+## Bean Scope
+| Scope  | Description |
+| :-- | :-- |
+| singleton | (Default) Scopes a single bean definition to a single object instance for each Spring IoC container. |
+| prototype | Scopes a single bean definition to any number of object instances. |
+| request | Scopes a single bean definition to the lifecycle of a single HTTP request. That is, each HTTP request has its own instance of a bean created off the back of a single bean definition. Only valid in the context of a web-aware Spring ApplicationContext. |
+| session | Scopes a single bean definition to the lifecycle of an HTTP Session. Only valid in the context of a web-aware Spring ApplicationContext. |
+| application | Scopes a single bean definition to the lifecycle of a ServletContext. Only valid in the context of a web-aware Spring ApplicationContext. |
+| websocket | Scopes a single bean definition to the lifecycle of a WebSocket. Only valid in the context of a web-aware Spring ApplicationContext. |
+
+
+
 
 
 
