--- a/Spring/SpringFramework/03.Validation.md
+++ b/Spring/SpringFramework/03.Validation.md
@@ -1,9 +1,9 @@
 # 验证、数据绑定和类型转换
-验证逻辑应独立于web层，易于本地化且能够植入任何可用的验证器。基于上述观点，Spring提供了`Validator`约定以适用于应用的各个层面。  
-数据绑定用于将用户输入动态地绑定到应用的领域模型(或任何用于处理用户输入的对象)。Spring为此提供了`DataBinder`类。`Validator`和`DataBinder`构成了`validation`包，该包主要用于但不限于web层。  
-`BeanWrapper`可能不会直接用到，但我们会做一些介绍。  
-Spring的`DataBinder`和底层的`BeanWrapper`都会用到`PropertyEditorSupport`实现类来格式化处理属性值。`PropertyEditor`和`PropertyEditorSupport`都是JavaBean的标准。Spring3提供了`core.convert`包来处理类型转换，同时也提供了更高层次的`format`包来格式化UI值。这些可以视作`PropertyEditorSupport`实现的一种替代方案。   
-Spring提供了一套基础架构及`Validator`约定的适配器来支持JavaBean验证，应用可以通过全局配置启动JavaBean验证并专用于所有验证需求。在wab层上，应用甚至可以为每个`DataBinder`注册局限于特定controller的`Validator`实例来实现自定义验证逻辑。  
+  验证逻辑应独立于web层，易于本地化且能够植入任何可用的验证器。基于上述观点，Spring提供了`Validator`约定以适用于应用的各个层面。  
+  数据绑定用于将用户输入动态地绑定到应用的领域模型(或任何用于处理用户输入的对象)。Spring为此提供了`DataBinder`类。`Validator`和`DataBinder`构成了`validation`包，该包主要用于但不限于web层。  
+  `BeanWrapper`可能不会直接用到，但我们会做一些介绍。  
+  Spring的`DataBinder`和底层的`BeanWrapper`都会用到`PropertyEditorSupport`实现类来格式化处理属性值。`PropertyEditor`和`PropertyEditorSupport`都是JavaBean的标准。Spring3提供了`core.convert`包来处理类型转换，同时也提供了更高层次的`format`包来格式化UI值。这些可以视作`PropertyEditorSupport`实现的一种替代方案。   
+  Spring提供了一套基础架构及`Validator`约定的适配器来支持JavaBean验证，应用可以通过全局配置启动JavaBean验证并专用于所有验证需求。在wab层上，应用甚至可以为每个`DataBinder`注册局限于特定controller的`Validator`实例来实现自定义验证逻辑。  
 
 # 一、使用Spring的`Validator`接口验证
 Spring提供了用于验证对象的`Validator`接口，接口提供了`Errors`对象用于记录验证失败的信息。  
@@ -100,6 +100,75 @@ public class CustomerValidator implements Validator {
 | `account.name` | 匹配属性`account`的嵌套属性`name`，对应于`getAccount().setName()`或`getAccount().getName()`方法。 |
 | `account[2]` | 可索引属性`account`的第三个元素。可索引属性的类型一般为`array`和`list`及其他可排序属性。 |
 | `account[COMPANYNAME]` | Map类型属性`account`中key为`COMPANYNAME`的对应值。 |
+
+使用`BeanWrapper`可以如示例一样设置和获取属性值：  
+```java
+public class Company {
+
+    private String name;
+    private Employee managingDirector;
+
+    public String getName() {
+        return this.name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public Employee getManagingDirector() {
+        return this.managingDirector;
+    }
+
+    public void setManagingDirector(Employee managingDirector) {
+        this.managingDirector = managingDirector;
+    }
+}
+
+public class Employee {
+
+    private String name;
+
+    private float salary;
+
+    public String getName() {
+        return this.name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public float getSalary() {
+        return salary;
+    }
+
+    public void setSalary(float salary) {
+        this.salary = salary;
+    }
+}
+
+BeanWrapper company = new BeanWrapperImpl(new Company());
+// setting the company name..
+company.setPropertyValue("name", "Some Company Inc.");
+// ... can also be done like this:
+PropertyValue value = new PropertyValue("name", "Some Company Inc.");
+company.setPropertyValue(value);
+
+// ok, let's create the director and tie it to the company:
+BeanWrapper jim = new BeanWrapperImpl(new Employee());
+jim.setPropertyValue("name", "Jim Stravinsky");
+company.setPropertyValue("managingDirector", jim.getWrappedInstance());
+
+// retrieving the salary of the managingDirector through the company
+Float salary = (Float) company.getPropertyValue("managingDirector.salary");
+
+```
+
+### 3.2 内置PropertyEditor实现
+
+
+
 
 
 
